--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,3 +29,13 @@ jobs:
         cache: maven
     - name: Build JAR with Maven
       run: mvn clean package -DskipTests
+
+    - uses: mr-smithers-excellent/docker-build-push@v6
+    name: Build & push Docker image
+    with:
+      image: admin9151/cicd-docker-image
+      tags: latest
+      registry: docker.io
+      dockerfile: Dockerfile
+      username: ${{ secrets.DOCKER_USERNAME }}
+      password: ${{ secrets.DOCKER_PASSWORD }}
