--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,7 @@
 				</configuration>
 			</plugin>
 		</plugins>
+        <finalName>springboot-cicd-docker-image</finalName>
 	</build>
 
 </project>
